# multirotor_sizing_isae_coa_2023_student

./: 00_Introduction.ipynb  01_CaseStudy.ipynb  02_SizingScenariosEquations-Student.ipynb  02_SizingScenariosEquations.ipynb  03_ScalingLawsElectricalComponents-Student.ipynb  03_ScalingLawsElectricalComponents.ipynb  04_PropellerLinearRegression-Student.ipynb  04_PropellerLinearRegression.ipynb  05_SizingModelsIntroduction.ipynb  05a_PropellerSelection-Student.ipynb  05a_PropellerSelection.ipynb  05b_MotorSelection-Student.ipynb  05b_MotorSelection.ipynb  05c_BatteryESCSelection-Student.ipynb  05c_BatteryESCSelection.ipynb  05d_FrameSelection-Student.ipynb  05d_FrameSelection.ipynb  06_FrameSizingCodeOptimization-StudentExample.ipynb  06_SystemSizingCodeOptimization-Reference.ipynb  06_SystemSizingCodeOptimization-Student.ipynb  06_SystemSizingCodeOptimization.ipynb  06_SystemSizingCodeOptimization_Student.ipynb  07_SystemEvaluationAndOptimization.ipynb  A2_Sizing_equations.ipynb  DRONE.py  README.md  pyproject.toml  requirements.txt
binder/: postBuild  requirements.txt
openmdao/: n2.html  problem_inputs_ref.xml  problem_outputs.xml  variable_names.txt
utils/openmdao_generator/: GUI_notebook.py  component_parse.py  component_string.py  derivative.py  global_filegen.py  global_string_gen.py  group_parse.py  group_string.py  higher_parse.py  n2_execute.py  n2_globals.py  parse_pack.py  parse_values.py  variable_rec_main.py  variable_recognition.py
utils/openmdao_generator/.ipynb_checkpoints/: Ipyvuetify GUI-checkpoint.ipynb
variable_data/: variable_data.txt
