[tool.black]
    line-length = 100

[tool.poetry]
    name = "sizinglab2022"
    version = "0.0.0"
    description = "Sizing Lab work"
    authors = [
        "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
        "Marc BUDINGER <marc.budinger@insa-toulouse.fr>",
        "Félix POLLET <felix.pollet@isae-supaero.fr>",
    ]
    keywords = [
        "sizing",
        "optimization"
    ]
    classifiers = [
        "Environment :: Console",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Education",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.7",
        "Topic :: Scientific/Engineering :: Physics"
    ]
    include = [
        "LICENSE"
    ]

[tool.poetry.dependencies]
python = "^3.7"
cloudpickle="^2"
pysizing={version = "^0.1.1*", allow-prereleases = true}
fast-oad="^1.2.1"
statsmodels="^0.12"
openpyxl="^3"
xlrd="^2"