[tool.poetry]
name = "multirotor_sizing"
version = "0.1.0"
description = ""
authors = ["f.pollet <felixpollet@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
statsmodels = "^0.13.5"
fast-oad-core = "^1.4.1"
cloudpickle = "^2.2.0"
scipy = "^1.4.1"
openmdao = "^3.10"
ipopo = "^1.0.0"
ipywidgets = "^7.7.0"
ipysheet = ">=0.5.0, <1"
plotly = "^5.0.0"
wop = "^2.2.0"
lxml = "^4.6.5"
tomlkit = ">=0.5.3, <1"
"ruamel.yaml" = ">=0.15.78, <0.18"
jsonschema = ">=3.2.0, <5"
ensure = "^1.0.0"
tabulate = "^0.8.9"
aenum = "^3.1.0"
jupyterlab = "^3.3.0"
jupyter-client = "!=7.0.0, !=7.0.1, !=7.0.2, !=7.0.3, !=7.0.4, !=7.0.5"  # v7.0.6 fixes issue #381
notebook = "^6.0"
stdatm = "0.*"
Deprecated = "^1.2.13"
click = "^8.0.3"
importlib-metadata = { version = "^4.2", python = "<3.10" }
mpi4py = {version = "^3", optional = true}
openpyxl = "^3.0.10"
ipyvuetify = "^1.8.4"
simpy = "^4.0.1"
sympy = "^1.11.1"
black = { version = "22.3.0", extras = ["jupyter"], allow-prereleases = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 120
color = true